# Compflow

./: README.md  compliance_engine.db  tmp_inputs_inspect.py  tmp_inputs_inspect.txt  tmp_inputs_inspect_formulas.py  tmp_inputs_inspect_formulas.txt  tmp_outputs_inspect.py  tmp_ruleset_inspect.py  tmp_scenarios_inspect.py  tmp_scenarios_inspect.txt
compliance-engine/: .env.example  .gitignore  ALL_SERVICES_COMPLETE.md  API_ROUTES_IMPLEMENTATION.md  BLOCKERS_FIXED.md  CALCULATION_EVIDENCE_IMPLEMENTATION.md  DATABASE_MIGRATION_REQUIRED.md  DELIVERY_COMPLETE.md  DEPLOYMENT_COMPLETE.md  EXPORT_SUMMARY_COMPLETE.md  GETTING_STARTED.md  GITHUB_PUSH_INSTRUCTIONS.md  HARDENING_CHECKLIST.md  HARDENING_COMPLETE.md  HARDENING_INDEX.md  HARDENING_PROGRESS_REPORT.md  HARDENING_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  INGESTION_CONTRACTS_FIXED.md  INGESTION_VALIDATION_IMPLEMENTATION.md  MVP_COMPLETE.md  MVP_HARDENING_ALL_TASKS_COMPLETE.md  OPTION_A_COMPLETE.md  PRODUCTION_CHECKLIST.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_HARDENING.md  QUICK_REFERENCE.md  README.md  README_DEPLOYMENT.md  RENDER_DEPLOYMENT.md  RENDER_DEPLOYMENT_COMPLETE.md  RULESET_IMPLEMENTATION.md  TASKS_6_7_COMPLETE.md  TASK_1_COMPLETE.md  TASK_6_EXCEL_EXTRACTION.md  WORKBOOK_DRIVEN_TESTS_COMPLETE.md  push_to_github.bat  (+9 more)
compliance-engine/docs/: compliance_engine_spec_v1.md  csv_contract_v1.md  demo_workflow.md  ruleset_versioning.md
compliance-engine/scripts/: create_test_data.py  export_inputs_from_workbook.py  extract_actual_values.py  extract_excel_values.py  extract_paye_rules_from_workbook.py  extract_ruleset_from_workbook.py  extract_uif_rules_from_workbook.py  generate_expected_from_excel_oracle.py  generate_expected_from_rules.py  generate_expected_from_workbook.py  (+6 more)
(+40 files in other folders)
